# A-Directional-Approach-to-Faithfulness-in-Graph-Neural-Networks

./: .gitignore  PROJECT_SETUP.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
notebooks/: 01_baseline_experiments.ipynb
scripts/: run_faithfulness_tests.py  run_fdi_pipeline.py  train_gnns.py
src/: __init__.py
src/faithfulness/: ablation.py  adversarial.py  diffing.py  metrics_extended.py  steering.py
src/models/: gnn_models.py
src/utils/: metrics.py  tracking.py
tests/: test_fdi_metrics.py  test_metrics.py
